Bug 467527 - "Restart needed for localized folder name (Drafts/Junk/Sent/Templates/Archives name in folderpane tree)" - fix fcc to reply folder case [r+sr=Standard8]